# rust-phf

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Makefile.in  README.md  README.tpl  RELEASE_PROCESS.md  build_docs.sh  configure  deny.toml  lib.rs  phf.rs  phf_mac.rs  release.sh  rust-toolchain.toml  test.rs
.circleci/: config.yml
.github/: SECURITY.md  renovate.json
.github/workflows/: benches.yml  ci.yml
.travis/: build_docs.sh  update_docs.sh
doc/: search-index.js
doc/implementors/phf_shared/: trait.PhfHash.js
doc/phf/: index.html  sidebar-items.js  stability.html  stability.json  struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html  trait.PhfHash.html
doc/phf/map/: index.html  struct.Entries.html  struct.Keys.html  struct.Map.html  struct.Values.html
doc/phf/ordered_map/: index.html  struct.Entries.html  struct.Keys.html  struct.OrderedMap.html  struct.Values.html
doc/phf/ordered_set/: index.html  struct.Iter.html  struct.OrderedSet.html
doc/phf/set/: index.html  struct.Iter.html  struct.Set.html
doc/phf_codegen/: index.html  stability.html  stability.json  struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html  trait.PhfHash.html
doc/phf_generator/: fn.generate_hash.html  index.html  sidebar-items.js  stability.html  stability.json  struct.HashState.html
doc/phf_macros/: index.html  macro.phf_map!.html  macro.phf_ordered_map!.html  macro.phf_ordered_set!.html  macro.phf_set!.html  sidebar-items.js  stability.html  stability.json
doc/phf_macros/util/: enum.Key.html  fn.create_map.html  fn.create_ordered_map.html  fn.create_ordered_set.html  fn.create_set.html  fn.generate_hash.html  fn.try_generate_hash.html  index.html  sidebar-items.js  struct.Entry.html  struct.HashState.html
doc/phf_shared/: fn.displace.html  index.html  sidebar-items.js  stability.html  stability.json  trait.PhfHash.html
doc/src/phf/: lib.rs.html  map.rs.html  ordered_map.rs.html  ordered_set.rs.html  set.rs.html
doc/src/phf_codegen/: lib.rs.html
doc/src/phf_generator/: lib.rs.html
doc/src/phf_macros/: lib.rs.html  macros.rs.html  util.rs.html
doc/src/phf_shared/: lib.rs.html
doc/v0.7.10/: search-index.js
doc/v0.7.10/phf/: index.html  sidebar-items.js  trait.PhfHash.html
doc/v0.7.10/phf_codegen/: struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html
doc/v0.7.10/phf_generator/: fn.generate_hash.html
doc/v0.7.10/phf_macros/: index.html  macro.phf_ordered_set!.html  macro.phf_set!.html
doc/v0.7.10/phf_shared/: fn.displace.html  fn.get_index.html
doc/v0.7.11/phf/: struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html  trait.PhfHash.html
doc/v0.7.11/phf_codegen/: struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html
doc/v0.7.11/phf_generator/: fn.generate_hash.html  index.html  struct.HashState.html
doc/v0.7.11/phf_macros/: index.html  macro.phf_map!.html  macro.phf_ordered_map!.html
doc/v0.7.11/phf_shared/: fn.hash.html  fn.split.html  index.html  trait.PhfHash.html
doc/v0.7.12/: search-index.js
doc/v0.7.12/phf/: struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  trait.PhfHash.html
doc/v0.7.12/phf_codegen/: index.html  struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html
doc/v0.7.12/phf_generator/: fn.generate_hash.html  struct.HashState.html
doc/v0.7.12/phf_macros/: index.html  macro.phf_map!.html  (+3 more)
doc/v0.7.13/: search-index.js
doc/v0.7.14/: search-index.js
doc/v0.7.15/: search-index.js
doc/v0.7.16/: search-index.js
doc/v0.7.17/: search-index.js
doc/v0.7.4/: search-index.js
doc/v0.7.6/: search-index.js
doc/v0.7.7/: search-index.js
doc/v0.7.8/: search-index.js
examples/: custom.rs  empty.rs  nested.rs  simple.rs  uncased.rs
phf/: CHANGELOG.md  Cargo.toml
phf/benches/: benches.rs
phf/examples/uncased-example/: Cargo.toml
phf/examples/uncased-example/src/: main.rs
phf/examples/unicase-example/: Cargo.toml
phf/examples/unicase-example/src/: main.rs
phf/src/: bi_map.rs  hash.rs  lib.rs  macros.rs  map.rs  ordered_map.rs  ordered_set.rs  set.rs  test.rs
phf/tests/: test.rs
phf_builder/: Cargo.toml
phf_builder/src/: lib.rs  test.rs
phf_cargo_hack/: Cargo.toml
phf_codegen/: CHANGELOG.md  Cargo.toml
phf_codegen/src/: lib.rs
phf_codegen/test/: Cargo.toml  build.rs
phf_codegen/test/src/: lib.rs
phf_generator/: CHANGELOG.md  Cargo.toml
phf_generator/benches/: benches.rs
phf_generator/examples/: gen_hash_test.rs
phf_generator/src/: lib.rs  ptrhash.rs  rng.rs  utils.rs
phf_mac/: Cargo.toml
phf_mac/src/: lib.rs  util.rs
phf_macros/: CHANGELOG.md  Cargo.toml
phf_macros/benches/: bench.rs
phf_macros/src/: lib.rs  macros.rs  parse.rs  util.rs
phf_macros/tests/: compiletest.rs  test.rs
phf_macros/tests/compile-fail/: bad-syntax.rs  bad-syntax.stderr
phf_macros/tests/compile-fail-unicase/: equivalent-keys-ascii.rs  equivalent-keys.rs  equivalent-keys.stderr
phf_macros_no_macros_test/: Cargo.toml
phf_macros_no_macros_test/tests/: direct.rs
phf_macros_test/: Cargo.toml
phf_macros_test/benches/: bench.rs
phf_macros_test/tests/: test.rs  trybuild.rs
phf_macros_test/tests/compile-fail/: bad-syntax.stderr  mixed.rs  mixed.stderr  unsuffixed-integer.rs  unsuffixed-integer.stderr
phf_macros_tests/: Cargo.toml
phf_macros_tests/benches/: bench.rs
phf_macros_tests/tests/: test.rs  trybuild.rs
phf_macros_tests/tests/compile-fail/: bad-syntax.stderr  mixed.stderr
phf_macros_tests/tests/compile-fail-uncased/: equivalent-keys.rs  equivalent-keys.stderr
phf_macros_tests/tests/compile-fail-unicase/: equivalent-keys.rs  equivalent-keys.stderr
phf_shared/: CHANGELOG.md  Cargo.toml  phf_shared.rs
phf_shared/benches/: benches.rs
phf_shared/src/: foldhash.rs  hasher.rs  lib.rs  ptrhash.rs  siphasher.rs
shared/: mod.rs
src/: containers.rs  generator.rs  keys.rs  lib.rs  macros.rs  phf.rs  phf_mac.rs  rand.rs  test.rs
src/containers/: ordered_map.rs  ordered_set.rs
(+985 files in other folders)
