[workspace]
resolver = "1"
members = [
    "phf",
    "phf/examples/unicase-example",
    "phf/examples/uncased-example",
    "phf_codegen",
    "phf_codegen/test",
    "phf_generator",
    "phf_macros",
    "phf_macros_test",
    "phf_shared"
]

[patch.crates-io]
phf = { path = "phf" }
phf_generator = { path = "./phf_generator" }
phf_macros = { path = "./phf_macros" }
phf_shared = { path = "./phf_shared" }
