[package]
name = "phf"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.11.0"
license = "MIT"
description = "Runtime support for perfect hash function data structures"
repository = "https://github.com/sfackler/rust-phf"
edition = "2018"
readme = "../README.md"

[lib]
name = "phf"
path = "src/lib.rs"
test = false

[features]
default = ["std"]
std = ["phf_shared/std"]
const-api = ["phf_shared/const-api"]
uncased = ["phf_shared/uncased"]
unicase = ["phf_shared/unicase"]
macros = [
    "phf_macros",
    "proc-macro-hack",
]

[dependencies]
proc-macro-hack = { version = "0.5.4", optional = true }
phf_macros = { version = "0.11.0", optional = true }
phf_shared = { version = "0.11.0", default-features = false }

[package.metadata.docs.rs]
features = ["macros"]
