[package]
name = "phf_builder"
version = "0.7.22"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Runtime creation of perfect hash function data structures"
repository = "https://github.com/sfackler/rust-phf"

[dependencies]
phf = { version = "=0.7.22", path = "../phf" }
phf_generator = { version = "=0.7.22", path = "../phf_generator" }
