[package]
name = "phf_codegen"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.13.1"
license = "MIT"
description = "Codegen library for PHF types"
repository = "https://github.com/rust-phf/rust-phf"
edition = "2024"
readme = "../README.md"
rust-version = "1.85"
categories = ["data-structures"]

[features]
ptrhash = ["phf_generator/ptrhash"]
quote = ["dep:proc-macro2", "dep:quote"]

[dependencies]
phf_generator = "0.13.1"
phf_shared = "0.13.1"
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
