[package]
name = "phf_mac"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.4.6"
license = "MIT"
description = "Compiler plugin for perfect hash function data structures"
repository = "https://github.com/sfackler/rust-phf"

[lib]
name = "phf_mac"
path = "src/lib.rs"
plugin = true
test = false

[dependencies.phf_shared]
path = "../phf_shared"
version = "=0.4.6"

[dependencies]
time = "0.1"
