[package]
name = "phf_mac"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.4.8"
license = "MIT"
description = "Compiler plugin for perfect hash function data structures"
repository = "https://github.com/sfackler/rust-phf"

[lib]
name = "phf_mac"
path = "src/lib.rs"
plugin = true
test = false

[features]
stats = ["time"]

[dependencies.phf_shared]
path = "../phf_shared"
version = "=0.4.8"

[dependencies.time]
version = "0.1"
optional = true
