[package]
name = "phf_macros"
version = "0.12.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Macros to generate types in the phf crate"
repository = "https://github.com/rust-phf/rust-phf"
readme = "../README.md"
rust-version = "1.61"
categories = ["data-structures"]

[lib]
proc-macro = true

[features]
unicase = ["unicase_", "phf_shared/unicase"]

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
unicase_ = { package = "unicase", version = "2.4.0", optional = true }

phf_generator = { version = "^0.12.0", default-features = false, path = "../phf_generator"}
phf_shared = { version = "^0.12.0", default-features = false, path = "../phf_shared"}
