[package]
name = "phf_macros_tests"
version = "0.1.0"
authors = ["Yuki Okushi"]
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/rust-phf/rust-phf"
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
trybuild = "1.0"
phf = { path = "../phf", features = ["macros"] }
phf_macros = { path = "../phf_macros", features = ["unicase", "uncased"] }
unicase = "2.4.0"
uncased = "0.9.7"
