[package]
name = "phf_shared"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.7.24"
license = "MIT"
description = "Support code shared by PHF libraries"
repository = "https://github.com/sfackler/rust-phf"
edition = "2018"

[lib]
name = "phf_shared"
path = "src/lib.rs"
test = false

[features]
core = []

[dependencies]
siphasher = "0.2"
unicase = { version = "2.4.0", optional = true }
