[package]
name = "phf_shared"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.13.1"
license = "MIT"
description = "Support code shared by PHF libraries"
repository = "https://github.com/rust-phf/rust-phf"
edition = "2021"
rust-version = "1.66"
categories = ["data-structures"]
readme = "README.md"

[lib]
name = "phf_shared"
path = "src/lib.rs"
test = false

[features]
default = ["std"]
std = []

[dependencies]
unicase = { version = "2.4.0", optional = true }
uncased = { version = "0.9.9", optional = true, default-features = false }
rapidhash = { version = "4.1.0" }
