[package]
name = "phf_codegen_test"
authors = ["Steven Fackler <sfackler@gmail.com>"]
version = "0.0.0"
build = "build.rs"
edition = "2021"

[dependencies]
phf = { version = "^0.11.2", features = ["uncased", "unicase"] }
uncased = { version = "0.9.9", default-features = false }
unicase = "2.6.0"

[build-dependencies]
phf_codegen = { version = "^0.11.2", path = ".." }
uncased = { version = "0.9.9", default-features = false }
unicase = "2.6.0"
