[package]
name = "uncased-example"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "^0.13.1", features = ["macros", "uncased"] }
uncased = "0.9.7"
