[package]
name = "uncased-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "^0.14.0", features = ["macros", "uncased"] }
uncased = "0.9.7"
