[package]
name = "unicase-example"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "^0.12.0", features = ["macros", "unicase"], path = "../../../phf"}
unicase = "2"
